# ParallelCapstone

./: CMakeLists.txt  data.txt  go.c  go.h  links.txt  main_ai.c  main_omp.c  main_serial.c  makefile  nice_output.txt  notes.txt
boards/: board.txt  early_board.txt  mid_board.txt  play_board.txt
